Nerfed Collector a tiny bit by spawning the bronze orbs through a power that lowers damage dealt. Made it so minichamps now apply their vulnerable at the start of next turn. Created Extermination and Hakurei Amulet VFX.

--- a/src/main/resources/paleoftheancients/localization/eng/powers.json
+++ b/src/main/resources/paleoftheancients/localization/eng/powers.json
@@ -34,6 +34,12 @@
     ]
   },
 
+  "paleoftheancients:PocketFactoryPower": {
+    "NAME": "Pocket Factory",
+    "DESCRIPTIONS": [
+      "End of turn, if there are less than #b"," #yBronze #yOrbs, create a #yBronze #yOrb."
+    ]
+  },
 
   "paleoftheancients:PrematureAwakening": {
     "NAME": "Premature Awakening",
